# WMS-SAEP

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  Makefile  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: architecture_and_domain_invariants.md  code_style_and_conventions.md  project_overview.md  project_status_post_materialization.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
apps/: models.py
apps/analytics/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/core/: apps.py  events.py
apps/materials/: admin.py  apps.py  csv_parser.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
apps/notifications/: admin.py  apps.py  handlers.py  models.py  policies.py  serializers.py  services.py  urls.py  views.py
apps/requisitions/: admin.py  apps.py  filters.py  idempotency.py  models.py  policies.py  ports.py  queries.py  seed_pilot_minimo.py  sequences.py  serializers.py  services.py  urls.py  views.py
apps/stock/: adapters.py  admin.py  apps.py  models.py  services.py
config/: urls.py
docs/: AGENTS.md  code-review-guidelines.md  coderabbit-guidelines.md  diagnostico-estrutura-mat-001.md
frontend/: eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
tests/: conftest.py  test_api_schema.py  test_bootstrap.py  test_estoque_material.py
(+136 files in other folders)
